--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<html lang="ru">
+
+<head>
+  <meta charset="UTF-8">
+  <link rel="icon" href="src/assets/logo.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO Meta Tags -->
+  <title>Aura Print</title>
+  <meta name="description"
+    content="Aura Print - производство маркетингового оборудования, корпоративного мерча, футболок, кружек в Москве. Высокое качество, быстрые сроки выполнения.">
+  <meta name="keywords"
+    content="маркетинговое оборудование, корпоративный мерч, футболки, кружки, печать, Москва, Aura Print">
+
+
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Aura Print - Маркетинговое оборудование и корпоративный мерч">
+  <meta property="og:description" content="Производство маркетингового оборудования и корпоративного мерча в Москве">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://аура-принт.рф">
+  <meta property="og:image" content="http://аура-принт.рф/src/assets/logo.png">
+
+
+
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
